--- a/index.html
+++ b/index.html
@@ -1,1 +1,235 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>인덱스 파일입니다.</title>
+    <base href="https://github.com/parkjihong23/parkjihong23.github.io/blob/main/">
+    <style>
+        body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    color: #333;
+}
 
+/* 제목 스타일 */
+h3 {
+    color: white;
+    margin-bottom: 5px;
+    background-color: grey;
+}
+
+ol li ol{
+    border: solid 1px;
+}
+
+/* 링크 스타일 */
+a {
+    color: black;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+    </style>
+
+</head>
+<body>
+<ol>
+    <li><h3>2주차 과제</h3>
+        <ol type ="A">
+            <li>p104</li>
+                <ul>
+                    <li><a href="2%EC%A3%BC%EC%B0%A8%EA%B3%BC%EC%A0%9C/p104/challenge02.html">챌린지1</a></li>
+                </ul>
+            <li>p107</li>
+            <ul>    
+                <li><a href="2%EC%A3%BC%EC%B0%A8%EA%B3%BC%EC%A0%9C/p107/실습문제1.html">실습문제1</a></li>
+            </ul>
+            <li>p108</li>
+            <ul>    
+                <li><a href="2%EC%A3%BC%EC%B0%A8%EA%B3%BC%EC%A0%9C/p108/실습문제2(1).html">실습문제2(1)</a></li>
+                <li><a href="2%EC%A3%BC%EC%B0%A8%EA%B3%BC%EC%A0%9C/p108/실습문제2(2).html">실습문제2(2)</a></li>
+                <li><a href="2%EC%A3%BC%EC%B0%A8%EA%B3%BC%EC%A0%9C/p108/실습문제3.html">실습문제3</a></li>
+                <li><a href="2%EC%A3%BC%EC%B0%A8%EA%B3%BC%EC%A0%9C/p108/실습문제4.html">실습문제4</a></li>
+            </ul>
+            <li>p109</li>
+            <ul>    
+                <li><a href="2%EC%A3%BC%EC%B0%A8%EA%B3%BC%EC%A0%9C/p109/실습문제5.html">실습문제5</a></li>
+                <li><a href="2%EC%A3%BC%EC%B0%A8%EA%B3%BC%EC%A0%9C/p109/실습문제6.html">실습문제6</a></li>
+            </ul>
+            <li>p110</li>
+            <ul>    
+                <li><a href="2%EC%A3%BC%EC%B0%A8%EA%B3%BC%EC%A0%9C/p110/실습문제7.html">실습문제7</a></li>
+                <li><a href="2%EC%A3%BC%EC%B0%A8%EA%B3%BC%EC%A0%9C/p110/실습문제8.html">실습문제8</a></li>
+            </ul>
+        </ol>
+    </li>
+
+    <li><h3>3주차 과제</h3>
+        <ol type ="A">
+            <li>flower</li>
+                <ul>
+                    <li><a href="3주차과제/flower/flower.html">flower</a></li>
+                </ul>
+            <li>p202</li>
+            <ul>    
+                <li><a href="3주차과제/p202/challenge04.html">challenge04</a></li>
+                <li><a href="3주차과제/p202/servey4.html">survey4</a></li>
+            </ul>
+            <li>p207</li>
+            <ul>    
+                <li><a href="3주차과제/p207/실습문제1.html">실습문제1</a></li>
+                <li><a href="3주차과제/p207/실습문제2.html">실습문제2</a></li>
+                <li><a href="3주차과제/p207/실습문제3.html">실습문제3</a></li>
+            </ul>
+            <li>p208</li>
+            <ul>    
+                <li><a href="3주차과제/p208/실습문제4.html">실습문제4</a></li>
+                <li><a href="3주차과제/p208/실습문제5.html">실습문제5</a></li>
+            </ul>
+            <li>p209</li>
+            <ul>    
+                <li><a href="3주차과제/p209/실습문제6.html">실습문제6</a></li>
+                <li><a href="3주차과제/p209/실습문제7.html">실습문제7</a></li>
+                <li><a href="3주차과제/p209/실습문제8.html">실습문제8</a></li>
+            </ul>
+            <li>p249</li>
+            <ul>    
+                <li><a href="3주차과제/p249/challenge05.html">챌랜지5</a></li>
+                <li><a href="3주차과제/p249/servey4.html">servey4</a></li>
+            </ul>
+            <li>p253</li>
+            <ul>    
+                <li><a href="3주차과제/p253/실습문제1(1).html">실습문제1(1)</a></li>
+                <li><a href="3주차과제/p253/실습문제1(2).html">실습문제1(2)</a></li>
+                <li><a href="3주차과제/p253/실습문제2.html">실습문제2</a></li>
+            </ul>
+            <li>p254</li>
+            <ul>    
+                <li><a href="3주차과제/p254/실습문제3.html">실습문제3</a></li>
+                <li><a href="3주차과제/p254/실습문제4(1).html">실습문제4(1)</a></li>
+                <li><a href="3주차과제/p254/실습문제4(2).html">실습문제4(2)</a></li>
+                <li><a href="3주차과제/p254/실습문제5.html">실습문제5</a></li>
+            </ul>
+            <li>p255</li>
+            <ul>    
+                <li><a href="3주차과제/p255/실습문제6(1).html">실습문제6(1)</a></li>
+                <li><a href="3주차과제/p255/실습문제6(2).html">실습문제6(2)</a></li>
+                <li><a href="3주차과제/p255/실습문제7.html">실습문제7</a></li>
+                <li><a href="3주차과제/p255/실습문제8.html">실습문제8</a></li>
+            </ul>
+            <li>p256</li>
+            <ul>    
+                <li><a href="3주차과제/p256/실습문제9.html">실습문제9</a></li>
+                <li><a href="3주차과제/p256/실습문제10.html">실습문제10</a></li>
+            </ul>
+        </ol>
+    </li>
+
+
+    <li><h3>4주차 과제</h3>
+        <ol type ="A">
+            <li>p303</li>
+                <ul>
+                    <li><a href="4주차과제/p303/challenge06.html">챌랜지6</a></li>
+                </ul>
+            <li>p307</li>
+            <ul>    
+                <li><a href="4주차과제/p307/실습문제1.html">실습문제1</a></li>
+                <li><a href="4주차과제/p307/실습문제2.html">실습문제2</a></li>
+            </ul>
+            <li>p308</li>
+            <ul>    
+                <li><a href="4주차과제/p308/실습문제3(1).html">실습문제3(1)</a></li>
+                <li><a href="4주차과제/p308/실습문제3(2).html">실습문제3(2)</a></li>
+                <li><a href="4주차과제/p308/실습문제4.html">실습문제4</a></li>
+                <li><a href="4주차과제/p308/실습문제5.html">실습문제5</a></li>
+            </ul>
+            <li>p309</li>
+            <ul>    
+                <li><a href="4주차과제/p309/실습문제6(1).html">실습문제6(1)</a></li>
+                <li><a href="4주차과제/p309/실습문제6(2).html">실습문제6(2)</a></li>
+                <li><a href="4주차과제/p309/실습문제7.html">실습문제7</a></li>
+            </ul>
+            <li>p310</li>
+            <ul>    
+                <li><a href="4주차과제/p310/실습문제8.html">실습문제8</a></li>
+            </ul>
+            <li>p343</li>
+            <ul>    
+                <li><a href="4주차과제/p343/실습문제1.html">실습문제1</a></li>
+            </ul>
+            <li>p344</li>
+            <ul>    
+                <li><a href="4주차과제/p344/실습문제2.html">실습문제2</a></li>
+                <li><a href="4주차과제/p344/실습문제3.html">실습문제3</a></li>
+                <li><a href="4주차과제/p344/실습문제4.html">실습문제4</a></li>
+            </ul>
+            <li>p345</li>
+            <ul>    
+                <li><a href="4주차과제/p345/실습문제5.html">실습문제5</a></li>
+                <li><a href="4주차과제/p345/실습문제6.html">실습문제6</a></li>
+            </ul>
+            <li>p346</li>
+            <ul>    
+                <li><a href="4주차과제/p346/실습문제7.html">실습문제7</a></li>
+            </ul>
+        </ol>
+    </li>
+
+    <li><h3>5주차 과제</h3>
+        <ol type ="A">
+            <li>챌린지7</li>
+                <ul>
+                    <li><a href="5주차과제/tlftmqanswp7.html">챌린지7</a></li>
+                </ul>
+            <li>실습문제1</li>
+            <ul>    
+                <li><a href="5주차과제/실습문제1.html">실습문제1</a></li>
+            </ul>
+            <li>실습문제2</li>
+            <ul>    
+                <li><a href="5주차과제/실습문제2.html">실습문제2</a></li>
+            </ul>
+            <li>실습문제3</li>
+            <ul>    
+                <li><a href="5주차과제/실습문제3.html">실습문제3</a></li>
+            </ul>
+            <li>실습문제4</li>
+            <ul>    
+                <li><a href="5주차과제/실습문제4.html">실습문제4</a></li>
+            </ul>
+            <li>실습문제5</li>
+            <ul>    
+                <li><a href="5주차과제/실습문제5.html">실습문제5</a></li>
+            </ul>
+            <li>실습문제6</li>
+            <ul>    
+                <li><a href="5주차과제/실습문제6.html">실습문제6</a></li>
+            </ul>
+            <li>실습문제7</li>
+            <ul>    
+                <li><a href="5주차과제/실습문제7.html">실습문제7</a></li>
+            </ul>
+        </ol>
+    </li>
+
+
+    <li><h3>6주차 과제</h3>
+        <ol type ="A">
+            <li>p380</li>
+                <ul>
+                    <li><a href="6주차과제/ts1.html">ts1</a></li>
+                </ul>
+            <li>p450</li>
+            <ul>    
+                <li><a href="6주차과제/ts2.html">ts2</a></li>
+            </ul>
+            
+        </ol>
+    </li>
+</ol>    
+</body>
+</html>
