--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>인덱스 파일입니다.</title>
-    <base href="https://github.com/parkjihong23/parkjihong23.github.io/blob/main/">
+    <base href="https://parkjihong23.github.io/">
     <style>
         body {
     font-family: Arial, sans-serif;
